--- a/服务器文件/templates/home.html
+++ b/服务器文件/templates/home.html
@@ -47,8 +47,8 @@
 </head>
 <body>
 <div id="header" >
-<h1 >GYH Blog
-    <a href="/information">
+<h1 >未完待续。。。
+    <a href="/hello">
         <img src="{%static "images/head.png"%}" align="center" width="30" height="30"/></a>
 </h1>
 </div>
@@ -70,7 +70,6 @@
     <li><a href="http://cn.bing.com/?mkt=zh-CN">
         <img src="{%static "images/bing.png"%}"  width="50" height="50"/></a><br><br><br>
     </li>
-    {#    <img src="{%static "gif/1.png"%}"  width="50" height="50"/></a><br><br>#}
 </nav>
 </div>
 <div id="navr">
@@ -85,12 +84,11 @@
         <img src="{%static "images/cnki.png"%}"  width="50" height="50"/></a><br><br><br>
     <a href="http://cn.bing.com/?mkt=zh-CN">
         <img src="{%static "images/bing.png"%}"  width="50" height="50"/></a><br><br><br>
-    {#    <img src="{%static "gif/1.png"%}"  width="50" height="50"/></a><br><br>#}
 </div>
 <div id="section">
 </div>
 <div  id="footer">
-Copyright by YiHui Gan @ 2017-2018
+Copyright by YiHui Gan &copy; 2017-2018
 </div>
 
 </body>
