--- a/服务器文件/templates/hello.html
+++ b/服务器文件/templates/hello.html
@@ -2,31 +2,121 @@
 {% load static %}
     <html>
     <head><title> :) </title></head>
-    <body>
-    <h2 style="FONT-SIZE: 40pt" align="center">
-        G Y H<br/>
-        <img src="{%static "images/my.png"%}" width="180" height="180" align="center"/>
-    </h2>
-    <hr>
-    <p style="FONT-SIZE: 30pt" align="center">
-        ---Personal Information---
+    <script type="text/javascript">
+        var countdown=60;
+        function settime(obj) {
+            if (countdown == 0) {
+                obj.removeAttribute("disabled");
+                obj.value="获取验证码";
+                countdown = 60;
+                return;
+            }
+            else{
+                obj.setAttribute("disabled", true);
+                obj.value="重新发送(" + countdown + ")";
+                countdown--;
+            }
+            setTimeout(function() {settime(obj) },1000)
+        }
+        function email_code(){
+            document.name.action="/code/";
+            document.name.submit();
+        }
+        function log_up(){
+            document.name.action="/logup/";
+            document.name.submit();
+        }
+    </script>
+    <style>
+        input{
+                border: 2px solid #ccc;
+                padding: 7px 0px;
+                border-radius: 3px;
+                padding-left:5px;
+                -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+                box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+                -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+                -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+                transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s
+            }
+            input:focus{
+                    border-color: #66afe9;
+                    outline: 0;
+                    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+                    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
+            }</style>
+
+    <hr style="height:5px;border:none;border-top:5px ridge red;" />
+    <p style="FONT-SIZE: 20pt" align="center">
+        ---填 写 注 册 信 息---
+        <br/>
+        <a style="color: #ff4f81;font-size: 15pt;">===注 册 有 礼===</a>
     <p/>
-    <hr>
-    <p style="FONT-SIZE: 30pt" align="center">
-        Country : China <br/>
-        <img src="{%static "images/china.png"%}"width="180" height="180" />
+    <hr style="height:5px;border:none;border-top:5px ridge darkorange;" />
+    <h2 style="FONT-SIZE: 8pt">
+        <iframe name='formSubmit' style='display: none;'></iframe>
+        <form name="name" method="get">
+        {% csrf_token %}
+            输入一个昵称
+            <br/>
+            <input type="text" name="id" placeholder="昵称" size="30" maxlength="10"  value="{{ gyh1 }}"/>
+            <a style="FONT-SIZE: 8pt;color: blue"> {{ messageforid }}</a>
+            <br/>
+            <br/>
+            电子邮箱
+            <br/>
+            <input type="email" name="email" placeholder="邮箱 123456@XXX.com"  size="30" maxlength="20" value="{{ gyh2 }}"/>
+            <a style="FONT-SIZE: 8pt;color: blue"> {{ messageforemail }}</a>
+            <br/>
+            <br/>
+            输入密码
+            <br/>
+            <input type="password" name="password" placeholder="密码"  size="30" maxlength="20" value="{{ gyh3 }}"/>
+            <a style="FONT-SIZE: 8pt;color: blue"> {{ messageforpassword }}</a>
+            <br/>
+            <br/>
+            确认密码
+            <br/>
+            <input type="password" name="passwordagain" placeholder="确认密码"  size="30" maxlength="20" value="{{ gyh4 }}"/>
+            <br/>
+            <br/>
+            填写验证码
+            <br/>
+            <input type="text" name="code" placeholder="验证码"  size="30" maxlength="20"/>
+            <input type="submit" value="获取验证码" onclick="email_code(){# ,settime(this) #}"/>
+            <a style="FONT-SIZE: 8pt;color: blue"> {{ code_TorF }}</a>
+            <br/>
+            <br/>
+            <input type="submit" value="注册" onclick="log_up()"/>
+            <a style="FONT-SIZE: 8pt; color: blue;"> {{ messagefordone }}</a>
+            <br/>
+        </form>
+    </h2>
+    <hr style="height:5px;border:none;border-top:5px ridge green;" />
+    <p align="center">
+        <a style="FONT-SIZE: 23pt;color: red">[————></a>
+        <a style="FONT-SIZE: 23pt;color: black">Personal Information</a>
+        <a style="FONT-SIZE: 23pt;color: red"><————]</a>
+    </p>
+    <hr style="height:5px;border:none;border-top:5px ridge blue;" />
+    <p style="FONT-SIZE: 20pt" align="center">
+        甘毅辉
         <br/>
-        University : NCU<br/>
-        <img src="{%static "images/ncu.png"%}" width="180" height="180"/>
+        <img src="{%static "images/my.png"%}" width="150" height="180"/>
         <br/>
-        Wechat : gyhdtc <br/>
-        <img src="{%static "images/wechat.png"%}" width="180" height="180"/>
+        University : NCU
+        <br/>
+        <img src="{%static "images/ncu.png"%}" width="150" height="150"/>
+        <br/>
+        WeChat : gyhdtc
+        <br/>
+        <img src="{%static "images/wechat.png"%}" width="150" height="150"/>
         <br/>
     </p>
-    <hr>
     <p align="center">
-    This website will be completed by Django + Nginx <br/>
-    Copyright by YiHui Gan @ 2017-2018
+        This website is be completed by Django + Apache ;Copyright by 甘毅辉大帅比 &copy; 2017-2018
+        <br/>
+        Supported by <a href="https://cn.aliyun.com/">阿里云</a>
     </p>
     </body>
     </html>
